--- a/css/main.css
+++ b/css/main.css
@@ -89,6 +89,7 @@ header p{
     box-shadow: 0 0 25px #22222219;
     max-width: 370px;
     min-height: 450px;
+    margin: 15px auto;
     transition: all .2s linear;
 }
 .card_item:hover{
@@ -193,5 +194,13 @@ footer{
 }
 .more_link{
     text-transform: uppercase;
-    color: orangered;
+    color: #ff4500c5;
+    transition: all .3s linear;
+}
+.more_link:hover{
+    color: #ff4500;
+    text-decoration: none;
+}
+.more_link i{
+    font-size: 18px;
 }
