--- a/css/main.css
+++ b/css/main.css
@@ -107,7 +107,7 @@ header p{
     padding-bottom: 25px;
 }
 .img_border{
-    width: 300px;
+    width: 100%;
     height: 300px;
     margin: 0 auto;
 }
@@ -115,7 +115,7 @@ header p{
     text-align: center;
 }
 .advantages_card{
-    max-width: 250px;
+    max-width: 100%;
 }
 .card_item p, .card_item h3{
     padding-bottom: 15px;
