--- a/css/media.css
+++ b/css/media.css
@@ -34,3 +34,57 @@
         max-width: 100%;
     }
 }
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    
+    h1{
+        font-size: 36px;
+        padding: 25px 0;
+    }
+    h3{
+        font-size: 18px;
+    }
+    header h2, h2{
+        font-size: 22px;
+    }
+    header p{
+        font-size: 18px;
+    }
+}
+
+@media (max-height: 376px) {
+    h1{
+        font-size: 20px;
+        padding: 0;
+    }
+    header h2{
+        font-size: 16px;
+    }
+    header p{
+        /* display: none; */
+        font-size: 15px;
+    }
+    header h2{
+        margin-top: 0;
+    }
+    header{
+        padding: 30px 0;
+    }
+}
+@media (max-height: 569px) {
+
+    header{
+        padding: 50px 0;
+    }
+    h1{
+        font-size: 20px;
+        padding: 0;
+    }
+    header h2{
+        font-size: 16px;
+    }
+    header p{
+        /* display: none; */
+        font-size: 15px;
+    }
+}
