--- a/css/media.css
+++ b/css/media.css
@@ -33,9 +33,12 @@
     .advantages_card {
         max-width: 100%;
     }
+    #reviews .carousel-item{
+        height: 15em;
+    }
 }
 
-@media (min-width: 768px) and (max-width: 1024px) {
+@media (min-width: 768px) and (max-width: 1023.98px) {
     
     h1{
         font-size: 36px;
@@ -49,6 +52,9 @@
     }
     header p{
         font-size: 18px;
+    }
+    #reviews .carousel-item{
+        height: 25em;
     }
 }
 
